// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReadMore should render expanded ReadMore component 1`] = `
<div
  className="readMoreSection"
>
  <img
    alt="close icon"
    aria-label="Close this section."
    className="closeIcon"
    data-cy="close button"
    onClick={[Function]}
    src="test-file-stub"
  />
  <div>
    <h3
      id="text-readmore-section-3-read-more-title"
    >
      This is a title
    </h3>
    <p
      className="preview"
      id="text-readmore-section-3-read-more-preview"
    />
    <div
      className="dashContainer"
    >
      <hr
        className="dash dash"
        style={
          Object {
            "width": "1.75px",
          }
        }
      />
    </div>
    <p
      className="expandedCopyText"
    >
      This is a test.
       
    </p>
    <p
      className="expandedCopyText"
    >
      Yes, this is the test.
       
    </p>
    <p
      className="expandedCopyText"
    >
      Four new lines.
       
    </p>
    <p
      className="expandedCopyText"
    >
      It is good.
       
    </p>
    <a
      href="#"
      onClick={[Function]}
    >
      Close
       
      <i
        className="fa fa-angle-right"
      />
    </a>
  </div>
</div>
`;

exports[`ReadMore should render expanded ReadMore component 2`] = `
<div
  className="readMoreSection"
>
  <img
    alt="close icon"
    aria-label="Close this section."
    className="closeIcon"
    data-cy="close button"
    onClick={[Function]}
    src="test-file-stub"
  />
  <div>
    <h3
      id="text-readmore-section-3-read-more-title"
    >
      This is a title
    </h3>
    <p
      className="preview"
      id="text-readmore-section-3-read-more-preview"
    />
    <div
      className="dashContainer"
    >
      <hr
        className="dash dash"
        style={
          Object {
            "width": "1.75px",
          }
        }
      />
    </div>
    <p
      className="expandedCopyText"
    >
      This is a test.
       
    </p>
    <p
      className="expandedCopyText"
    >
      Yes, this is the test.
       
    </p>
    <p
      className="expandedCopyText"
    >
      Four new lines.
       
    </p>
    <p
      className="expandedCopyText"
    >
      It is good.
       
    </p>
    <a
      href="#"
      onClick={[Function]}
    >
      Cerrar
       
      <i
        className="fa fa-angle-right"
      />
    </a>
  </div>
</div>
`;

exports[`ReadMore should render read more button when not expanded 1`] = `
<div
  className="readMoreSection"
>
  <div>
    <h3
      id="text-readmore-section-3-read-more-title"
    >
      This is a title
    </h3>
    <p
      className="preview"
      id="text-readmore-section-3-read-more-preview"
    />
    <div
      className="dashContainer"
    >
      <hr
        className="dash dash"
        style={
          Object {
            "width": "1.75px",
          }
        }
      />
    </div>
    
    <a
      href="#"
      onClick={[Function]}
    >
      Read more
       
      <i
        className="fa fa-angle-right"
      />
    </a>
  </div>
</div>
`;
